<resources>
    <string name="app_name">My Badminton Scores</string>

    <string name="login_title">Social Media Login</string>
    <string name="new_match_title">Add New Match</string>
    <string name="list_matches_title">Match List</string>

    <string name="facebook_app_id">467811920086939</string>
    <string name="member_login_api_url">https://devel.xs-tech.sg/api/public/member/login</string>
    <string name="member_update_api_url">https://devel.xs-tech.sg/api/public/member/update</string>
    <string name="post_match_api_url">https://devel.xs-tech.sg/api/public/badminton/match</string>
    <string name="get_matches_api_url">https://devel.xs-tech.sg/api/public/badminton/</string>

    // New Match view
    <string name="add_match_button">New Match</string>
    <string name="add_match_title">New Match</string>
    <string name="add_match_label_date">Match Date:</string>
    <string name="add_match_button_date">Today</string>
    <string name="add_match_label_match_type">Match Type:</string>
    <string name="add_match_match_type_1v1">Singles</string>
    <string name="add_match_match_type_2v2">Doubles</string>
    <string name="add_match_score_team">Team Score:</string>
    <string name="add_match_score_opponent">Opponent Score:</string>
    <string name="add_match_select_players">Select Players</string>
    <string name="add_match_submit_match">Submit Match</string>
    <string name="add_match_submit_successful">Match submitted successfully</string>

    // Select Players view
    <string name="select_players_title">Choose players</string>
    <string name="select_players_team">Player Team</string>
    <string name="select_players_opponent">Opponent</string>
    <string name="select_players_player1">Player 1</string>
    <string name="select_fb_player1">FB Player 1</string>
    <string name="select_players_player2">Player 2</string>
    <string name="select_fb_player2">FB Player 2</string>
    <string name="select_players_submit">Submit Players</string>

    <string name="player_name_prompt">Enter player name:</string>
    <string name="player_name_submit">Confirm player</string>
    <string name="player_name_cancel">Cancel</string>

    <string name="friends_list_title">Friends</string>

    // Match History view
    <string name="list_match_button">View Match History</string>
    <string name="view_match_detail">Match Detail</string>
    <string name="edit_match_detail">Update Match</string>
    <string name="edit_match_submit_match">Update Match</string>

    // Error messages
    <string name="missing_fb_app_id">Unauthorised Application</string>
    <string name="missing_token">Unauthorised Access</string>
    <string name="missing_identification">Unauthorised Access</string>
    <string name="not_match_creator">You cannot update this match detail</string>
    <string name="invalid_score">Invalid Score Entered</string>
    <string name="invalid_team_score">Invalid Team Score</string>
    <string name="invalid_opponent_score">Invalid Opponent Score</string>
    <string name="not_a_member">Unauthorised Access</string>
    <string name="token_mismatch">Unauthorised Access</string>
    <string name="missing_team_player1">Please select Team Player 1</string>
    <string name="missing_team_player2">Please select Team Player 2</string>
    <string name="missing_opponent_player1">Please select Opponent Player 1</string>
    <string name="missing_opponent_player2">Please select Opponent Player 2</string>
    <string name="missing_team_player_details">Team Player 1 has not authorised this application</string>
    <string name="missing_opponent_details">Opponent Player 1 has not authorised this application</string>
    <string name="facebook_graph_error">Facebook has presented error. Please try again later.</string>
    <string name="facebook_error">Facebook has presented error. Please try again later.</string>
    <string name="server_error">Server experienced an error. Please try again later.</string>
</resources>
