<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MatchDetailActions">

    <LinearLayout
        android:id="@+id/forMatchDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/add_match_label_date" />

        <Button
            android:id="@+id/edit_match_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showDatePickerDialog"
            android:text="@string/add_match_button_date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forMatchType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/forMatchDate">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/add_match_label_match_type" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/edit_match_radio_1v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onMatchTypeSelected"
                android:text="@string/add_match_match_type_1v1" />

            <RadioButton
                android:id="@+id/edit_match_radio_2v2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onMatchTypeSelected"
                android:text="@string/add_match_match_type_2v2" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forTeamScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/forMatchType"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/add_match_score_team" />

        <EditText
            android:id="@+id/team_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/forTeamPlayer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/forTeamScore"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/select_players_player1"/>

        <Button
            android:id="@+id/edit_match_team_player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/forTeamPlayer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/forTeamPlayer1"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/select_players_player2"/>

        <Button
            android:id="@+id/edit_match_team_player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/forOpponentScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/forTeamPlayer2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/add_match_score_opponent" />

        <EditText
            android:id="@+id/opponent_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/forOpponentPlayer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/forOpponentScore"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/select_players_player1"/>

        <Button
            android:id="@+id/edit_match_opponent_player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/forOpponentPlayer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/forOpponentPlayer1"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/select_players_player2"/>

        <Button
            android:id="@+id/edit_match_opponent_player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forOpponentPlayer2"
        android:onClick="onSubmitMatch"
        android:text="@string/edit_match_submit_match" />


</RelativeLayout>