<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.xs_tech.mybadmintonscores.SelectPlayers"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        android:text="@string/select_players_team"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_players_player1"
            android:id="@+id/team_player1"
            android:layout_weight=".5"
            android:onClick="onSelectTeamPlayer1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_fb_player1"
            android:id="@+id/fb_team_player1"
            android:layout_weight=".5"
            android:onClick="onSelectFbTeamPlayer1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_players_player2"
            android:id="@+id/team_player2"
            android:visibility="visible"
            android:layout_weight=".5"
            android:onClick="onSelectTeamPlayer2"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_fb_player2"
            android:id="@+id/fb_team_player2"
            android:layout_weight=".5"
            android:onClick="onSelectFbTeamPlayer2"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_players_opponent"
        android:id="@+id/textView4"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textAlignment="center"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_players_player1"
            android:id="@+id/opponent_player1"
            android:layout_weight=".5"
            android:onClick="onSelectOpponentPlayer1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_fb_player1"
            android:id="@+id/fb_opponent_player1"
            android:layout_weight=".5"
            android:onClick="onSelectFbOpponentPlayer1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_players_player2"
            android:id="@+id/opponent_player2"
            android:visibility="visible"
            android:layout_weight=".5"
            android:onClick="onSelectOpponentPlayer2"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_fb_player2"
            android:id="@+id/fb_opponent_player2"
            android:layout_weight=".5"
            android:onClick="onSelectFbOpponentPlayer2"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_players_submit"
            android:id="@+id/submit_players"
            android:onClick="onSubmitPlayers"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/friend_stats"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>
